--- a/ebook/pubspec.yaml
+++ b/ebook/pubspec.yaml
@@ -29,7 +29,9 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   connectivity_plus: ^4.0.0
+  cookie_jar: ^4.0.7
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
   dio: ^5.1.2
   equatable: ^2.0.5
   flutter:
@@ -41,6 +43,8 @@ dependencies:
   flutter_svg: ^2.0.5
   font_awesome_flutter: ^10.4.0
   get_it: ^7.6.0
+  injectable: ^2.1.2
+  logger: ^1.4.0
   package_info_plus: ^4.0.0
   permission_handler: ^10.2.0
   shared_preferences: ^2.1.1
