--- a/ebook/pubspec.yaml
+++ b/ebook/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animate_do: ^3.0.2
   awesome_dialog: ^3.1.0
   connectivity_plus: ^4.0.0
   cookie_jar: ^4.0.7
