--- a/ebook/pubspec.yaml
+++ b/ebook/pubspec.yaml
@@ -45,11 +45,13 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_screenutil: ^5.8.1
+  flutter_spinkit: ^5.2.0
   flutter_svg: ^2.0.5
   fluttertoast: ^8.2.2
   font_awesome_flutter: ^10.4.0
   get_it: ^7.6.0
   injectable: ^2.1.2
+  loader_overlay: ^2.3.0
   logger: ^1.4.0
   modal_bottom_sheet: ^2.1.2
   package_info_plus: ^4.0.0
