--- a/ebook/pubspec.yaml
+++ b/ebook/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   animate_do: ^3.0.2
   awesome_dialog: ^3.1.0
+  cached_network_image: ^3.2.3
   connectivity_plus: ^4.0.0
   cookie_jar: ^4.0.7
   cupertino_icons: ^1.0.2
@@ -50,6 +51,7 @@ dependencies:
   fluttertoast: ^8.2.2
   font_awesome_flutter: ^10.4.0
   get_it: ^7.6.0
+  infinite_scroll_pagination: ^3.2.0
   injectable: ^2.1.2
   loader_overlay: ^2.3.0
   logger: ^1.4.0
@@ -57,6 +59,7 @@ dependencies:
   package_info_plus: ^4.0.0
   permission_handler: ^10.2.0
   shared_preferences: ^2.1.1
+  shimmer: ^3.0.0
   syncfusion_flutter_charts: ^22.1.39
   syncfusion_flutter_datagrid: ^22.1.39
 
