--- a/ebook/pubspec.yaml
+++ b/ebook/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cookie_jar: ^4.0.7
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
+  device_preview: ^1.1.0
   dio: ^5.1.2
   dotted_border: ^2.0.0+3
   equatable: ^2.0.5
