--- a/ebook/pubspec.yaml
+++ b/ebook/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^5.1.2
   dotted_border: ^2.0.0+3
   equatable: ^2.0.5
+  expansion_tile_card: ^3.0.0
   file_picker: ^5.3.3
   flutter:
     sdk: flutter
@@ -89,9 +90,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/file/
     - assets/language/
-    - assets/images/plane_indicator/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
