--- a/library_app/pubspec.yaml
+++ b/library_app/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   animate_do: ^3.1.2
   awesome_dialog: ^3.1.0
+  bloc_concurrency: ^0.2.2
   cached_network_image: ^3.2.3
   confetti: ^0.7.0
   connectivity_plus: ^4.0.2
