--- a/library_app/pubspec.yaml
+++ b/library_app/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   file_picker: ^5.5.0
   flutter:
     sdk: flutter
+  flutter_animate: ^4.2.0+1
   flutter_bloc: ^8.1.3
   flutter_cached_pdfview: ^0.4.2
   flutter_carousel_slider: ^1.1.0
