--- a/library_app/android/app/src/main/AndroidManifest.xml
+++ b/library_app/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" android:minSdkVersion="30" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>   
+    <queries>
+    <intent>
+        <action android:name="android.intent.action.TTS_SERVICE" />
+    </intent>
+    </queries>
     <application
         android:label="library_app"
         android:name="${applicationName}"
