--- a/library_app/pubspec.yaml
+++ b/library_app/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   flutter_spinkit: ^5.2.0
   flutter_svg: ^2.0.7
+  flutter_tts: ^3.8.3
   fluttertoast: ^8.2.2
   font_awesome_flutter: ^10.5.0
   get_it: ^7.6.4
