--- a/library_app/pubspec.yaml
+++ b/library_app/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   equatable: ^2.0.5
   expansion_tile_card: ^3.0.0
   file_picker: ^5.5.0
+  firebase_core: ^2.21.0
+  firebase_messaging: ^14.7.3
   flutter:
     sdk: flutter
   flutter_animate: ^4.2.0+1
