--- a/library_app/pubspec.yaml
+++ b/library_app/pubspec.yaml
@@ -76,8 +76,9 @@ dependencies:
   search_page: ^2.3.0
   shared_preferences: ^2.2.1
   shimmer: ^3.0.0
-  syncfusion_flutter_pdf: ^24.1.44
-  syncfusion_flutter_pdfviewer: ^24.1.44
+  syncfusion_flutter_charts: ^24.1.47+2
+  syncfusion_flutter_pdf: ^24.1.47
+  syncfusion_flutter_pdfviewer: ^24.1.47
 
 dev_dependencies:
   flutter_lints: ^2.0.0
