--- a/library_app/android/app/build.gradle
+++ b/library_app/android/app/build.gradle
@@ -47,6 +47,8 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 21
+        multiDexEnabled true
+        manifestPlaceholders += [pdftronLicenseKey:PDFTRON_LICENSE_KEY]
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
